--- a/src/main/resources/Styles/Dashboard.css
+++ b/src/main/resources/Styles/Dashboard.css
@@ -154,7 +154,6 @@
     -fx-cursor: hand;
     -fx-font-weight: Bold;
     -fx-border-color: #132A13;
-    -fx-effect: dropshadow(three-pass-box, #AAAAAA, 0, 0 , 0 , 0);
     -fx-border-radius: 5 5 5 5;
 }
 .bold {
